--- a/CourceExamples/layoutexample/src/main/res/values/strings.xml
+++ b/CourceExamples/layoutexample/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LayoutExample</string>
     <string name="addButtonTitle">Add</string>
+    <string name="listItemFormat">%1$d+%2$d=%3$d</string>
 </resources>
